# rust-student-pairs

./: .gitignore  Cargo.toml  upload.sh
src/: database.rs  main.rs
static/: style.css
templates/: alt-choices.html  base.html  choices.html  day.html  edit-day.html  grid.html  hello.html  index.html  pairs.html  section-view.html  sections.html  student-options.html  student.html  students.html  team-options.html  team-view.html  teams.html  zoom.html
