[package]
name = "rust-student-pairs"
version = "0.1.0"
authors = ["droundy <roundyd@physics.oregonstate.edu>"]

build = "build.rs"

[dependencies]
rouille = "2.1.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
askama = "0.7"
tempfile = "3.0.3"
internment = "0.3.6"
rand = "0.5.5"

[build-dependencies]
askama = "0.7"
