[package]
name = "rust-student-pairs"
version = "0.1.0"
authors = ["droundy <roundyd@physics.oregonstate.edu>"]

[dependencies]
rouille = "3.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
askama = "0.8"
tempfile = "3.0.3"
internment = "0.3.6"
rand = "0.7"

[build-dependencies]
askama = "0.8"
